--- a/package.xml
+++ b/package.xml
@@ -10,8 +10,8 @@
   <email>demrit@php.net</email>
   <active>yes</active>
  </lead>
- <date>2009-11-04</date>
- <time>08:45:00</time>
+ <date>2010-05-04</date>
+ <time>16:40:00</time>
  <version>
   <release>0.10.0</release>
   <api>0.10.0</api>
@@ -24,12 +24,13 @@
  <notes>
 * Support for PHP 5.2+
 * Allowed tags with setAllowTags() method.
+* AllowTags can be disabled using resetAllowTags()
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
    <file baseinstalldir="/" md5sum="5bdeb7ab5474ab86389716053fbee2b9" name="docs/README" role="doc" />
-   <file baseinstalldir="/" md5sum="00bb35d326e00eb148d1e6d410e6837a" name="HTML/Safe.php" role="php" />
-   <file baseinstalldir="/" md5sum="ea8eb223fc4424b317f4c9953c09c978" name="tests/testHTML_Safe.php" role="test" />
+   <file baseinstalldir="/" md5sum="7d0b57df0cb0abb44ca403c5ec74fd23" name="HTML/Safe.php" role="php" />
+   <file baseinstalldir="/" md5sum="209a048c9cba1a7c9f24ebcf0be2e309" name="tests/testHTML_Safe.php" role="test" />
   </dir>
  </contents>
  <dependencies>
@@ -51,19 +52,20 @@
  <changelog>
   <release>
    <version>
-    <release>0.10.0beta</release>
-    <api>0.10.0beta</api>
+    <release>0.10.0</release>
+    <api>0.10.0</api>
    </version>
    <stability>
-    <release>beta</release>
-    <api>beta</api>
+    <release>release</release>
+    <api>release</api>
    </stability>
-   <date>2009-11-04</date>
+   <date>2010-05-04</date>
    <license>BSD (3 Clause)</license>
    <notes>
    </notes>
 * Support for PHP 5.2+
 * Allowed tags with setAllowTags() method.
+* AllowTags can be disabled using resetAllowTags()
   </release>
  </changelog>
 </package>
