--- a/package.xml
+++ b/package.xml
@@ -17,8 +17,8 @@
   <api>0.10.0</api>
  </version>
  <stability>
-  <release>release</release>
-  <api>release</api>
+  <release>beta</release>
+  <api>beta</api>
  </stability>
  <license>BSD (3 Clause)</license>
  <notes>
@@ -56,8 +56,8 @@
     <api>0.10.0</api>
    </version>
    <stability>
-    <release>release</release>
-    <api>release</api>
+    <release>beta</release>
+    <api>beta</api>
    </stability>
    <date>2010-05-04</date>
    <license>BSD (3 Clause)</license>
