--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<package packagerversion="1.8.1" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0 http://pear.php.net/dtd/tasks-1.0.xsd http://pear.php.net/dtd/package-2.0 http://pear.php.net/dtd/package-2.0.xsd">
+<package packagerversion="1.9.4" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0 http://pear.php.net/dtd/tasks-1.0.xsd http://pear.php.net/dtd/package-2.0 http://pear.php.net/dtd/package-2.0.xsd">
  <name>HTML_Safe</name>
  <channel>pear.php.net</channel>
  <summary>This parser strips down all potentially dangerous content within HTML</summary>
@@ -10,8 +10,8 @@
   <email>demrit@php.net</email>
   <active>yes</active>
  </lead>
- <date>2010-08-02</date>
- <time>18:40:00</time>
+ <date>2014-03-09</date>
+ <time>22:02:59</time>
  <version>
   <release>0.10.1</release>
   <api>0.10.1</api>
@@ -28,7 +28,8 @@
   <dir baseinstalldir="/" name="/">
    <file baseinstalldir="/" md5sum="5bdeb7ab5474ab86389716053fbee2b9" name="docs/README" role="doc" />
    <file baseinstalldir="/" md5sum="0a5fc1cd0f7e68c67993c5c165b10be2" name="HTML/Safe.php" role="php" />
-   <file baseinstalldir="/" md5sum="209a048c9cba1a7c9f24ebcf0be2e309" name="tests/testHTML_Safe.php" role="test" />
+   <file baseinstalldir="/" md5sum="611659186a53b7456c0b953b07487d90" name="tests/HTML_SafeTest.php" role="test" />
+   <file baseinstalldir="/" md5sum="1eedde2cd990063781792e9324931e1d" name="composer.json" role="data" />
   </dir>
  </contents>
  <dependencies>
@@ -57,11 +58,11 @@
     <release>beta</release>
     <api>beta</api>
    </stability>
-   <date>2010-08-04</date>
+   <date>2014-03-09</date>
    <license>BSD (3 Clause)</license>
    <notes>
-   </notes>
 * UTF-7 XSS vulnerability fixed
+   </notes>
   </release>
  </changelog>
 </package>
